[gd_scene load_steps=2 format=3 uid="uid://d1am52i2x7qwc"]

[ext_resource type="Script" path="res://scripts/paused_menu.gd" id="1_06c41"]

[node name="PausedMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06c41")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 0.701961)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Paused"

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
